--- a/index.html
+++ b/index.html
@@ -2711,71 +2711,17 @@ let navigationMode = {
 };
 
 // Marcar interação do usuário durante navegação (helper function)
+// NOTA: Função mantida para compatibilidade, mas não é mais necessária
+// pois o mapa está totalmente livre durante a navegação
 function markUserInteraction() {
-    if (navigationMode.active) {
-        console.log('✋ Usuário interagindo - pausando controle automático');
-        navigationMode.userInteracting = true;
-        navigationMode.lastUserInteraction = Date.now();
-
-        if (navigationMode.autoResumeTimeout) {
-            clearTimeout(navigationMode.autoResumeTimeout);
-        }
-
-        navigationMode.autoResumeTimeout = setTimeout(() => {
-            navigationMode.userInteracting = false;
-            console.log('🔄 Retomando controle automático do mapa');
-            showToast('🧭 Navegação retomada', 'Controle automático do mapa reativado', 'info', 2000);
-        }, 8000);
-    }
+    // Função vazia - mapa sempre livre
 }
 
 // Detectar quando usuário interage com o mapa durante navegação
+// NOTA: Função mantida para compatibilidade, mas não faz mais nada
+// pois o mapa está totalmente livre durante a navegação
 function setupNavigationMapInteraction() {
-    if (!map) {
-        console.error('❌ setupNavigationMapInteraction: mapa não existe!');
-        return;
-    }
-
-    console.log('🎯 Configurando listeners de interação do mapa para navegação...');
-
-    // Eventos do Google Maps que indicam interação do usuário
-    const interactionEvents = [
-        'dragstart',      // Usuário começou a arrastar
-        'zoom_changed',   // Zoom foi alterado
-        'heading_changed',// Rotação foi alterada
-        'tilt_changed',   // Inclinação foi alterada
-        'bounds_changed'  // Viewport mudou (captura tudo)
-    ];
-
-    interactionEvents.forEach(eventName => {
-        map.addListener(eventName, () => {
-            console.log(`🔔 Evento do mapa detectado: ${eventName}`);
-            markUserInteraction();
-        });
-    });
-
-    // Também adicionar listeners DOM no elemento do mapa (backup)
-    const mapDiv = document.getElementById('map');
-    if (mapDiv) {
-        console.log('🎯 Adicionando listeners DOM no elemento #map...');
-
-        mapDiv.addEventListener('mousedown', () => {
-            console.log('🖱️ MOUSEDOWN no mapa!');
-            markUserInteraction();
-        });
-
-        mapDiv.addEventListener('touchstart', () => {
-            console.log('👆 TOUCHSTART no mapa!');
-            markUserInteraction();
-        });
-
-        mapDiv.addEventListener('wheel', () => {
-            console.log('🎡 WHEEL no mapa!');
-            markUserInteraction();
-        });
-    }
-
-    console.log('✅ Listeners de interação configurados!');
+    console.log('✅ Modo de navegação livre - usuário tem controle total do mapa');
 }
 
 // Calcular heading (direção) entre duas posições
@@ -3033,12 +2979,6 @@ async function recalculateRoute(origin, destination) {
 function updateNavigationView() {
     if (!navigationMode.active || !navigationMode.destination) return;
 
-    // ✨ PAUSAR COMPLETAMENTE se usuário estiver interagindo
-    if (navigationMode.userInteracting) {
-        // console.log('⏸️ Navegação pausada - usuário interagindo');
-        return; // Não fazer NADA quando usuário está controlando
-    }
-
     // Obter posição atual do GPS
     let currentPos = null;
     if (gpsTracker && gpsTracker.marker) {
@@ -3094,74 +3034,12 @@ function updateNavigationView() {
         return;
     }
 
-    // Calcular heading baseado na direção do MOVIMENTO do veículo
-    // Isso faz o mapa girar conforme o veículo faz curvas
-    let movementHeading = navigationMode.lastHeading;
-
-    if (navigationMode.lastPosition) {
-        const movementDistance = calculateDistanceMeters(navigationMode.lastPosition, currentPos);
-
-        // Atualizar heading se houve movimento significativo (> 2 metros)
-        if (movementDistance > 2) {
-            const newHeading = calculateHeading(navigationMode.lastPosition, currentPos);
-
-            // Suavizar a transição do heading para evitar saltos bruscos
-            if (movementHeading !== 0) {
-                let diff = newHeading - movementHeading;
-                // Normalizar diferença
-                if (diff > 180) diff -= 360;
-                if (diff < -180) diff += 360;
-                // Aplicar suavização
-                movementHeading = (movementHeading + diff * 0.5 + 360) % 360;
-            } else {
-                movementHeading = newHeading;
-            }
-
-            navigationMode.lastHeading = movementHeading;
-        }
-    } else {
-        // Primeira posição - usar direção para o destino como inicial
-        movementHeading = calculateHeading(currentPos, navigationMode.destination);
-        navigationMode.lastHeading = movementHeading;
-    }
-
+    // ✨ NAVEGAÇÃO SEM CONTROLE AUTOMÁTICO DO MAPA
+    // O mapa agora fica TOTALMENTE livre para o usuário controlar
+    // Apenas mantemos o tracking de distância e verificação de chegada
     navigationMode.lastPosition = currentPos;
 
-    // ✨ CONTROLE AUTOMÁTICO DO MAPA
-    // Neste ponto, sabemos que o usuário NÃO está interagindo (verificado no início da função)
-    if (map) {
-        // Usar setHeading para rotacionar o mapa na direção do movimento
-        if (map.setHeading) {
-            // Suavizar a rotação do mapa
-            const currentMapHeading = map.getHeading() || 0;
-            let diff = movementHeading - currentMapHeading;
-
-            // Normalizar diferença para -180 a 180
-            if (diff > 180) diff -= 360;
-            if (diff < -180) diff += 360;
-
-            // Aplicar rotação suavizada (mais suave para curvas naturais)
-            const newMapHeading = currentMapHeading + diff * 0.2;
-            map.setHeading(newMapHeading);
-        }
-
-        // Centralizar diretamente na posição atual do GPS
-        // Isso mantém o marcador alinhado com a linha azul da rota
-        map.panTo(currentPos);
-
-        // Manter zoom apropriado para navegação
-        const currentZoom = map.getZoom();
-        if (currentZoom < 17) {
-            map.setZoom(17);
-        } else if (currentZoom > 19) {
-            map.setZoom(18);
-        }
-
-        // Inclinar mapa para vista de navegação 3D (se suportado)
-        if (map.setTilt && map.getTilt() === 0) {
-            map.setTilt(45);
-        }
-    }
+    console.log(`📍 Navegação ativa - Distância até destino: ${Math.round(distanceToDestination)}m`);
 }
 
 // Loop de animação Tween.js (sincronizado com requestAnimationFrame)
