--- a/index.html
+++ b/index.html
@@ -2787,7 +2787,7 @@ function startNavigationMode(destination, destinationName, marker = null, infoWi
     // Mostrar toast informativo
     showToast(
         '🧭 Navegação ativa',
-        'O mapa seguirá seu veículo automaticamente',
+        'Você pode mover o mapa livremente!',
         'info',
         4000
     );
@@ -3640,7 +3640,7 @@ function addGPSCenterButton() {
 }
 
 window.initMap = function () {
-    console.log('Iniciando mapa...');
+    console.log('🚀🚀🚀 VERSÃO COM MAPA LIVRE v2.0 - Iniciando mapa...');
     updateLoadingScreen('Carregando mapa...', 'Preparando visualização');
 
     try {
